[package]
authors = ["Bruce Meerkat <bruce.meerkat@gmail.com>"]
name = "dfile-api"
version = "1.19.1018"

[dependencies]
rocket = { version = "0.4.2", default-features = false }
rocket_cors = { version = "0.4.0", default-features = false }
dotenv = "0.9.0"
multipart = "0.16.1"
rusoto_core = "0.41.0"
rusoto_s3 = "0.41.0"
time = "0.1.37"
rust-crypto = "0.2.36"
bs58 = "0.3.0"
hex = "0.3.1"
